apps-helm/jellyfin/manifests/ts-egress.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "jellyfin.macaroni-pirate.ts.net"
    tailscale.com/proxy-group: egress-proxies
  name: ts-egress
spec:
  externalName: unused
  type: ExternalName
  ports:
  - port: 443
    protocol: TCP
    name: https
