apps-helm/jellyfin/manifests/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    tailscale.com/proxy-group: heimdall
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - bustling-ghost
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: http
