apps-helm/jellyfin/manifests/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  # annotations:
  #   tailscale.com/proxy-group: ingress-proxies
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - jellyfin
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: http
